<resources>
    <string name="app_name">Oasis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="stores">Stores</string>
    <string name="profile">Profile</string>
    <string name="task">Task</string>
    <string name="sign_out">SignOut</string>
    <string name="completed_task">Completed Task</string>
    <string name="pending_task">Pending Task</string>
    <string name="all_assgined_stores">All Assgined Stores</string>
    <string name="all_completed_tasks">All Completed Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="date">Date</string>
    <string name="ref_img">Ref img</string>
    <string name="capture_image">Capture Image</string>
    <string name="view">View</string>
    <string name="check_list">Check List</string>
    <string name="stock_fill">Stock Fill</string>
    <string name="sort_order">Sort Order</string>
    <string name="price_display">Price Display</string>
    <string name="offer_display">Offer Display</string>
    <string name="all_pending_task">All Pending Task</string>
    <string name="update">Update</string>
    <string name="all_assigned_stores">All Assigned Stores</string>
    <string name="store_name">Store Name</string>
    <string name="co_ordinates">Co-ordinates</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="completed_task_detail">Completed Task Detail</string>
    <string name="completed_task_detail_information">Completed Task Detail Information</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="pending_task_detail_information">Pending Task Detail Information</string>
    <string name="store_detail_information">Store Detail Information</string>
    <string name="store_details">Store Details</string>
    <string name="pending_task_details">Pending Task Details</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="assigned_marchantine_names">Assigned Marchantine Names</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="old_password">Old Password</string>
    <string name="click_to_upload_image"><u>Click To Upload Image</u></string>
    <string name="end_date">End Date</string>
    <string name="id">Id</string>
    <string name="store_id">Store Id</string>
</resources>