<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/dn_dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"/>

    <item
        android:id="@+id/dn_stores"
        android:title="@string/stores"
        android:icon="@drawable/ic_store"/>
<!--
    <item
        android:id="@+id/dn_task"
        android:title="@string/task"
        android:icon="@drawable/ic_task"/>-->

    <item
        android:id="@+id/dn_pending"
        android:title="@string/pending_task"
        android:icon="@drawable/ic_pending"/>

    <item
        android:id="@+id/dn_complete"
        android:title="@string/completed_task"
        android:icon="@drawable/ic_completed"/>

<!--
    <group
        android:checkableBehavior="single"
        android:visible="false"
        android:id="@+id/dn_all_task">

        <item
            android:id="@+id/dn_pending"
            android:title="@string/pending_task"
            android:icon="@drawable/ic_pending"/>

        <item
            android:id="@+id/dn_complete"
            android:title="@string/completed_task"
            android:icon="@drawable/ic_completed"/>

    </group>
-->

    <group>

        <item
            android:id="@+id/dn_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>
    </group>

    <group>

        <item
            android:id="@+id/dn_signout"
            android:title="@string/sign_out"
            android:icon="@drawable/ic_signout"/>

    </group>
</menu>