<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mainscreen.fragment.AllAssignedFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvBackAllAssigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimShortSpace3"
                android:src="@drawable/ic_back_arrow"
                android:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imvBackAllAssigned"
                android:paddingTop="2.5dp"
                android:text="@string/stores"
                android:textColor="@color/white" />

            <!-- <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/edit_profile_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/profile"
                 android:tint="@color/white"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/dimen80px"/>

             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/dimShortSpace3"
                 android:layout_toLeftOf="@+id/edit_profile_icon"
                 android:fontFamily="@font/fontspring_demo_biennale_regular"
                 android:text="Ahnaf"
                 android:textColor="@color/white" />-->

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen53px"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_assigned_stores"
            android:textColor="@color/pink" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen53px"
            android:layout_marginTop="@dimen/dimen35px">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/pink"
                    android:orientation="horizontal">

                    <TableRow>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/dimen35px"
                            android:gravity="center"
                            style="@style/paragraph"
                            android:text="@string/task_name"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/dimen35px"
                            style="@style/paragraph"
                            android:gravity="center"
                            android:text="@string/store_name"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/paragraph"
                            android:padding="@dimen/dimen35px"
                            android:gravity="center"
                            android:text="@string/co_ordinates"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/paragraph"
                            android:padding="@dimen/dimen35px"
                            android:gravity="center"
                            android:text="@string/country"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/paragraph"
                            android:gravity="center"
                            android:padding="@dimen/dimen35px"
                            android:text="@string/region"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            style="@style/paragraph"
                            android:padding="@dimen/dimen35px"
                            android:text="@string/view"/>

                    </TableRow>

                </TableLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen53px"
                    android:id="@+id/recyclerAllAssigned"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>