<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/splash_background"
    tools:context=".ui.mainscreen.activity.ActivityResetPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imvBackChangePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimShortSpace3"
                    android:src="@drawable/ic_back_arrow"
                    android:tint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/imvBackChangePassword"
                    android:paddingTop="2.5dp"
                    android:text="@string/change_password"
                    android:textColor="@color/white" />

                <!-- <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/edit_profile_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/profile"
                     android:tint="@color/white"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/dimen80px"/>

                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/dimShortSpace3"
                     android:layout_toLeftOf="@+id/edit_profile_icon"
                     android:fontFamily="@font/fontspring_demo_biennale_regular"
                     android:text="Ahnaf"
                     android:textColor="@color/white" />-->

            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dimen53px"
            android:layout_marginTop="@dimen/dimen53px"
            android:layout_marginEnd="@dimen/dimen53px"
            android:layout_marginBottom="@dimen/dimen53px"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen53px"
                android:text="@string/reset_your_password"
                android:textColor="@color/pink" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen140px"
                android:src="@drawable/ic_change_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen140px"
                android:background="@drawable/bg_round_border"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="@dimen/dimen53px"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen53px"
                android:background="@drawable/bg_round_border"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:padding="@dimen/dimen53px"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAssignedBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen105px"
                android:background="@drawable/bg_round_border"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/done"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</ScrollView>